--- a/mlops_course.ipynb
+++ b/mlops_course.ipynb
@@ -27,33 +27,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "K28AUog3BKoM"
-      },
-      "source": [
-        "# <span style='color :#40be46' > Let's prepare the environment </span>\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "1M21zzwRBKoN"
-      },
-      "source": [
-        "✨ <span style='color : #fae253' > TASK </span> ✨\n",
-        "\n",
-        "Since we want to work in a secure and trusted way, we will use Artifactory to store both the model as well as all the Python dependencies that will be used during the process. \n",
-        "\n",
-        "Please perform the following steps:\n",
-        "1. Log in to the Artifactory training instance here: https://jftrain17224572670.jfrog.io/\n",
-        "2. From the projects dropdown list, select your project (\"mlops-userx\")\n",
-        "3. Navigate to *Administration --> Repositories*.\n",
-        "4. Click 'Create a Repository' and select *Remote*. Then, select *HuggingFaceML* .\n",
-        "5. On the next page, you only need to provide the *Repository Key* (the repo name)  **The repository will be prefixed with your project name (\"mlops-userx\"). Please add the repository key \"hf-remote\"**  then click `Create Remote Repository`"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "nkYprO9zBKoY"
       },
       "source": [
@@ -68,14 +41,21 @@
       "source": [
         "## Configure the HuggingFace client to work through Artifactory\n",
         "\n",
-        "We don't have to start from scratch! Luckily HuggingFace contains some great object detection models we can try out. \n",
+        "We don't have to start from scratch!\n",
+        "Luckily HuggingFace contains some great object detection models we can try out. \n",
         "Since we want to store the models in Artifactory, we'll need to configure the environment as follows.\n",
         "\n",
         "✨ <span style='color : #fae253' > TASK </span> ✨\n",
         "\n",
-        "On the Artifactory training instance, navigate to your newly created *remote HuggingFaceML* repository and click \"Set Me Up\" in the top bar on the right.\n",
-        "1. Copy the *token* and paste it into the cell below, replacing the \\<IDENTITY_TOKEN> placeholder \n",
-        "2. Replace x (in *userx-hf-remote* inside the HF_ENDPOINT env var) with your lab studentId number\n",
+        "1. Log in to the Artifactory training instance here: https://jftrain17224572670.jfrog.io/\n",
+        "2. From the projects dropdown list, select your project (\"mlops-userx\")\n",
+        "3. Navigate to *Administration --> Repositories*.\n",
+        "4. Click 'Create a Repository' and select *Remote*. Then, select *HuggingFaceML* .\n",
+        "5. On the next page, you only need to provide the *Repository Key* (the repo name)  **The repository will be prefixed with your project name (\"mlops-userx\"). Please add the repository key \"hf-remote\"**  then click `Create Remote Repository`\n",
+        "6. You will get a dialog suggesting to set up the HuggingFaceML client or Do It Later - click `Set Up HuggingFaceML client`.\n",
+        "7. Enter your Artifactory password then click `Generate Token & Create Instructions`. Then, click the `Install` tab.\n",
+        "8. Copy the *token* and paste it into the cell below, replacing the \\<IDENTITY_TOKEN> placeholder.\n",
+        "9. Replace x (in *userx-hf-remote* inside the HF_ENDPOINT env var) with your lab studentId number.\n",
         "\n",
         "👀 The next cell sets the environment variables such that the huggingface client which we'll use later does not fetch the model from the hugging_face hub, but rather from Artifactory."
       ]
@@ -93,7 +73,7 @@
         "%env HF_TOKEN=<IDENTITY-TOKEN>\n",
         "\n",
         "# Replace x (in userx-hf-remote) with your userid number\n",
-        "%env HF_ENDPOINT=https://jftrain17224572670.jfrog.io/artifactory/mlops-userx-hf-remote/\n",
+        "%env HF_ENDPOINT=https://jftrain17224572670.jfrog.io/artifactory/api/huggingfaceml/mlops-userx-hf-remote\n",
         "\n",
         "%env HF_HUB_ETAG_TIMEOUT=86400"
       ]
@@ -114,7 +94,7 @@
         "✨ <span style='color : #fae253' > TASK </span> ✨\n",
         "\n",
         "1. In Artifactory, go to our pypi repository: https://jftrain17224572670.jfrog.io/ui/repos/tree/General/mlops-training-remote-pypi \n",
-        "2. Click `Set Me Up` in the top bar, then click the `Install` tab.\n",
+        "2. Click `Set Me Up` in the top bar, enter your Artifactory password then click `Generate Token & Create Instructions`. Then, click the `Install` tab.\n",
         "3. Copy the URL from the value of index-url (should look something like https://youruser:<PASSWORD>@jftrain17224572670.jfrog.io/artifactory/api/pypi/mlops-training-remote-pypi/simple)\n",
         "4. Replace \\<ARTIFACTORY_PIP_REPOSITORY_URL> with the URL you copied.\n",
         "\n",
@@ -184,7 +164,7 @@
         "\n",
         "✨ <span style='color : #fae253' > TASK </span> ✨\n",
         "\n",
-        "Replace \\<YOUR_NAME> with your name. Don't forget to put it in quotes, e.g. \"Tom\"."
+        "Replace \\<YOUR_NAME> with your name. Don't forget to put it in quotes, e.g. \"Tom\". "
       ]
     },
     {
@@ -372,7 +352,7 @@
       "source": [
         "Let's go ahead and test the model! \n",
         "Please approve using the camera for the model to work.\n",
-        "Once you have the video stream, click \"Capture\" to take a photo, and examine the model's output.\n",
+        "Once you have the video stream, click \"Capture\" (above the video block on the top left) to take a photo, and examine the model's output.\n",
         "Then, run the cell again and take a photo of yourself and the Jfrog frog. Did the model identify the frog?\n",
         "\n",
         "*NOTE:*\n",
@@ -551,6 +531,7 @@
         "        config['classes'].append(class_id)\n",
         "        config['classes'].extend([cls for cls in target_classes if cls not in config['classes']])\n",
         "\n",
+        "    config['max_det'] = 2\n",
         "\n",
         "    # Save the updated config back to the file\n",
         "    with open(config_file, 'w') as file:\n",
@@ -733,10 +714,7 @@
         "# Replace <ARTIFACTORY_PIP_REPOSITORY_URL> with the URL pointing to your pip repository found in the the JFrog Platform Set-Me-Up.\n",
         "!pip3 install qwak-sdk -i <ARTIFACTORY_PIP_REPOSITORY_URL>\n",
         "# Replace <QWAK_PERSONAL_API_KEY> with your Qwak personal key from the qwak platform.\n",
-        "!qwak configure --api-key \"<QWAK_PERSONAL_API_KEY>\"\n",
-        "\n",
-        "# Test successful connection\n",
-        "!qwak projects list"
+        "!qwak configure --api-key \"<QWAK_PERSONAL_API_KEY>\""
       ]
     },
     {
@@ -788,7 +766,19 @@
         "\n",
         "We've already deployed the model in order to be able to test it without waiting for the build to complete. Let's check our deployment and see if we're able to authenticate with the Frog-Factor Authenticator.\n",
         "\n",
-        "👀  We'll be testing with the latest image which you captured. It is saved in the local session as \"photo.jpg\". You can always go back to the last inference cell and rerun it to take another photo. Do not forget the frog!"
+        "👀  We'll take another photo for the inference. Do not forget the frog! The detection boxes will not appear, we will perform the detection later on the Qwak platform.\n",
+        "If you wish to use Tom Hank's photo instead, don't run the next cell."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "imagefile = take_photo()\n",
+        "image = Image.open('photo.jpg')\n",
+        "image.show()   \n"
       ]
     },
     {
