more review fixes

--- a/mlops_course.ipynb
+++ b/mlops_course.ipynb
@@ -205,7 +205,7 @@
         "\n",
         "Let's check Artifactory to review the outcome.\n",
         "\n",
-        "On the Artifactory trauining instance, navigate to your newly created *remote HuggingfaceML repository*.\n",
+        "On the Artifactory training instance, navigate to your newly created *remote HuggingfaceML repository*.\n",
         "\n",
         "Here is a direct link (replace x with your studentID):  https://jftrain17224572670.jfrog.io/artifactory/mlops-userx-hf-remote/\n",
         "\n",
@@ -712,7 +712,7 @@
       "outputs": [],
       "source": [
         "# Replace <ARTIFACTORY_PIP_REPOSITORY_URL> with the URL pointing to your pip repository found in the the JFrog Platform Set-Me-Up.\n",
-        "!pip3 install qwak-sdk -i <ARTIFACTORY_PIP_REPOSITORY_URL>\n",
+        "!pip3 install qwak-sdk --use-deprecated=legacy-resolver -i <ARTIFACTORY_PIP_REPOSITORY_URL>\n",
         "# Replace <QWAK_PERSONAL_API_KEY> with your Qwak personal key from the qwak platform.\n",
         "!qwak configure --api-key \"<QWAK_PERSONAL_API_KEY>\""
       ]
@@ -907,7 +907,7 @@
         "\n",
         "1. In the [Quak Platform](https://app.qwak.ai/) Navigate to *Models*.\n",
         "2. Select your project and click your model.\n",
-        "3. Under the *Builds* tab, identify your build and click `Deploy`.\n",
+        "3. Under the *Builds* tab, identify your build and click `Deploy`. This is only possible after the model finished building.\n",
         "4. Select `Realtime`.\n",
         "5. On the next screen, click `Deploy Model`. No need to change anything.\n"
       ]
