remove repo img

--- a/mlops_course.ipynb
+++ b/mlops_course.ipynb
@@ -207,11 +207,7 @@
         "\n",
         "On the Artifactory training instance, navigate to your newly created *remote HuggingfaceML repository*.\n",
         "\n",
-        "Here is a direct link (replace x with your studentID):  https://jftrain17224572670.jfrog.io/artifactory/mlops-userx-hf-remote/\n",
-        "\n",
-        "You'll see something similar to the following:\n",
-        "\n",
-        "![image.png](./model/main/img/repo.png)"
+        "Here is a direct link (replace x with your user number):  https://jftrain17224572670.jfrog.io/artifactory/mlops-userx-hf-remote/"
       ]
     },
     {
@@ -739,8 +735,8 @@
       },
       "outputs": [],
       "source": [
-        "!qwak models create \"Frog_Factor_Authenticator\" --project <userx>         \n",
-        "!qwak models build --model-id Frog_Factor_Authenticator ./model --base-image 'public.ecr.aws/w8k8y6b6/qwak-base:0.0.14-gpu-opencv' --gpu-compatible"
+        "!qwak models create \"frog_factor_authenticator\" --project <userx>         \n",
+        "!qwak models build --model-id \"frog_factor_authenticator\" ./model --base-image 'public.ecr.aws/w8k8y6b6/qwak-base:0.0.14-gpu-opencv' --gpu-compatible"
       ]
     },
     {
