--- a/mlops_course.ipynb
+++ b/mlops_course.ipynb
@@ -52,8 +52,8 @@
         "3. Navigate to *Administration --> Repositories*.\n",
         "4. Click 'Create a Repository' and select *Remote*. Then, select *HuggingFaceML* .\n",
         "5. On the next page, you only need to provide the *Repository Key* (the repo name)  **The repository will be prefixed with your project name (\"mlops-userx\"). Please add the repository key \"hf-remote\"**  then click `Create Remote Repository`\n",
-        "6. You will get a dialog suggesting to set up the HuggingFaceML client or Do It Later - click `Set Up HuggingFaceML client`.\n",
-        "7. Enter your Artifactory password then click `Generate Token & Create Instructions`. Then, click the `Install` tab.\n",
+        "6. A dialog will open, suggesting to set up the HuggingFaceML client or Do It Later - click `Set Up HuggingFaceML client`.\n",
+        "7. Enter your Artifactory password then click `Generate Token & Create Instructions`.\n",
         "8. Copy the *token* and paste it into the cell below, replacing the \\<IDENTITY_TOKEN> placeholder.\n",
         "9. Replace x (in *userx-hf-remote* inside the HF_ENDPOINT env var) with your lab studentId number.\n",
         "\n",
@@ -95,7 +95,7 @@
         "\n",
         "1. In Artifactory, go to our pypi repository: https://jftrain17224572670.jfrog.io/ui/repos/tree/General/mlops-training-remote-pypi \n",
         "2. Click `Set Me Up` in the top bar, enter your Artifactory password then click `Generate Token & Create Instructions`. Then, click the `Install` tab.\n",
-        "3. Copy the URL from the value of index-url (should look something like https://youruser:<PASSWORD>@jftrain17224572670.jfrog.io/artifactory/api/pypi/mlops-training-remote-pypi/simple)\n",
+        "3. Copy the URL from the value of index-url (starting with \"https://...\")\n",
         "4. Replace \\<ARTIFACTORY_PIP_REPOSITORY_URL> with the URL you copied.\n",
         "\n",
         "\n",
@@ -207,7 +207,7 @@
         "\n",
         "On the Artifactory training instance, navigate to your newly created *remote HuggingfaceML repository*.\n",
         "\n",
-        "Here is a direct link (replace x with your user number):  https://jftrain17224572670.jfrog.io/artifactory/mlops-userx-hf-remote/"
+        "Or, Here is a direct link (replace x with your user number):  https://jftrain17224572670.jfrog.io/artifactory/mlops-userx-hf-remote/"
       ]
     },
     {
@@ -610,10 +610,11 @@
         "1. Navigate to *Administration --> Repositories*.\n",
         "2. From the projects dropdown list, select your project (\"mlops-userx\").  \n",
         "3. Click 'Create a Repository' and select **Local**. Select HuggingFaceML.\n",
-        "4. On the next page, only provide the Repository Key (the repo name). The repository will be prefixed with your project name (\"mlops-userx\"). Please add the repository key \"hf-local\" then click Create Local Repository.\n",
-        "5. Navigate to \"Application --> Artifactory --> Artifacts\" and find your newly created local repository. Click \"Set Me Up\" located on the top right.\n",
-        "6. Copy the *token* and paste it into the cell below, replacing the \\<IDENTITY_TOKEN> placeholder.\n",
-        "7. Copy the HF_ENDPOINT value and paste it in the cell below, replacing the \\<PATH> placeholder.\n"
+        "4. On the next page, only provide the Repository Key (the repo name). The repository will be prefixed with your project name (\"mlops-userx\"). Please add the repository key **\"hf-local\"** then click Create Local Repository.\n",
+        "5. A dialog will open, suggesting to set up the HuggingFaceML client or Do It Later - click `Set Up HuggingFaceML client`.\n",
+        "6. Enter your Artifactory password then click `Generate Token & Create Instructions`.\n",
+        "7. Copy the *token* and paste it into the cell below, replacing the \\<IDENTITY_TOKEN> placeholder.\n",
+        "8. Replace x (in **userx-hf-local** inside the HF_ENDPOINT env var) with your lab studentId number.\n"
       ]
     },
     {
