--- a/mlops_course.ipynb
+++ b/mlops_course.ipynb
@@ -30,7 +30,7 @@
       "source": [
         "✨ <font color=\"#f8c76b\"> TASK </font> ✨\n",
         "\n",
-        "In the cell below, please replace /<USERID> with the userid you got for the labs. For example, if you are user3, it should look like this:\n",
+        "In the cell below, please replace \\<USERID> with the userid you got for the labs. For example, if you are user3, it should look like this:\n",
         "\n",
         "userid = \"user3\""
       ]
@@ -848,6 +848,7 @@
         "\n",
         "    return img\n",
         "\n",
+        "\n",
         "def analze_results(results):\n",
         "\n",
         "    with open(config_file, 'r') as f:\n",
@@ -859,8 +860,8 @@
         "    success_img = Image.open('model/main/img/success.png')\n",
         "    success_rgba = np.array(success_img.convert('RGBA'))\n",
         "\n",
-        "    powered_by_img = Image.open('model/main/img/powered_by.png')\n",
-        "    powered_by_rgba_rgba = np.array(success_img.convert('RGBA')) \n",
+        "    powered_by_img = Image.open('model/main/img/powered-by.png')\n",
+        "    powered_by_rgba = np.array(powered_by_img.convert('RGBA')) \n",
         "\n",
         "    # Main processing loop\n",
         "    target_detected = False\n",
@@ -883,7 +884,7 @@
         "    if target_detected:\n",
         "    # Overlay the success image at the top of the frame\n",
         "        blended =overlay_image_alpha(frame, success_rgba)\n",
-        "        cv2_imshow(blended)\n",
+        "        final = overlay_image_alpha(blended, powered_by_rgba, position=\"bottom\")\n",
         "    else:\n",
         "        # Display \"Authentication Failed\" text\n",
         "        cv2.putText(frame, \"Authentication Failed\", (frame.shape[1] // 2 - 150, 50), cv2.FONT_HERSHEY_SIMPLEX, 1, (0, 0, 255), 2)\n",
@@ -911,8 +912,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "👀  We'll take another photo for the inference. Do not forget the frog! The detection boxes will not appear, we will perform the detection later on the Qwak platform.\n",
-        "If you wish to use Tom Hanks' photo instead, "
+        "👀  We'll take another photo for the inference. Do not forget the frog! The detection boxes will not appear, we will perform the detection later on the Qwak platform."
       ]
     },
     {
